--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "supabase-js": "^2.30.0"
+    "@supabase/supabase-js": "^2.30.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
